functions erstellt für das erstellen, löschen und bearbeiten der Tasks

--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="/Projekt-M294/script.js/"></script>
-    <title>ToDo-Liste</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./index.js"></script>
+    <title>ToDo Index</title>
 </head>
 <body>
-    
+    <button><a href=./index.html>Meine Liste</a></button>
+    <header>
+        <form action="./bearbeiten.html">
+            <input type="submit" value="Tasks Hinzufügen" />
+        </form>
+    </header>
+    <h1>Meine Liste:</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Completed</th>
+                <th>Löschen</th>
+            </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
 </body>
 </html>
