feat: "Taskname ändern" Butten hinzugefügt

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <th>ID</th>
                 <th>Title</th>
                 <th>Completed</th>
-                <th>Löschen</th>
+                <th>Löschen/Taskname ändern</th>
             </tr>
         </thead>
         <tbody>
