--- a/login.html
+++ b/login.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <script src="./index.js"></script>
-    <title>Document</title>
+    <script src="./login.js"></script>
+    <title>Login</title>
+    <style>
+        label {
+            display: hidden;
+        }
+    </style>
+
 </head>
+
 <body>
-    
+    <h2>Login</h2>
+    <div id="loggedIn" class="hidden">
+        <p>Sie sind eingeloggt!</p>
+    </div>
+    <div id="notLoggedIn" class="hidden">
+
+        <form id="login">
+            <div>
+                <label for="emailInput">Email</label>
+                <input type="email" name="email" id="emailInput">
+            </div>
+            <div>
+                <label for="passwordInput">Passwort</label>
+                <input type="password" name="password" id="passwordInput">
+        </form>
+    </div>
+    <button type="submit">Login</button>
+    </form>
+    </div>
 </body>
+
 </html>
