feat: style.css hinzugefügt -> daher änderungen in HTML dateien

--- a/bearbeiten.html
+++ b/bearbeiten.html
@@ -9,12 +9,15 @@
     <title>ToDo Hinzufügen</title>
 </head>
 <body>
-    <button><a href=./index.html>Meine Liste</a></button>
-    
+    <div class="linkdiv">
+        <button><a href=./index.html>Meine Liste ✔</a></button>
+    </div>
+    <div class="hinzufügdiv">
     <h1>Neuer Task erstellen</h1>
       <form id="add">
         <input type="text" name="task hinzufügen" id="addInput" />
         <button id="added" type="submit">Tasks Hinzufügen</button>
     </form>
+    </div>
 </body>
 </html>
