--- a/login.html
+++ b/login.html
@@ -17,25 +17,28 @@
 </head>
 
 <body>
-    <h2>Login</h2>
-    <div id="loggedIn" class="hidden">
-        <p>Sie sind eingeloggt!</p>
-    </div>
-    <div id="notLoggedIn" class="hidden">
+    <div class="logindiv">
+        <h1>Login</h1>
+        <div id="loggedIn" class="hidden">
+            <p>Sie sind eingeloggt!</p>
+        </div>
+        <div id="notLoggedIn" class="hidden">
 
-        <form id="login">
-            <div>
-                <label for="emailInput">Email</label>
-                <input type="email" name="email" id="emailInput">
-            </div>
-            <div>
-                <label for="passwordInput">Passwort</label>
-                <input type="password" name="password" id="passwordInput">
+            <form id="login">
+                <div>
+                    <label for="emailInput">Email</label>
+                    <input type="email" name="email" id="emailInput">
+                </div>
+                <div>
+                    <label for="passwordInput">Passwort</label>
+                    <input type="password" name="password" id="passwordInput">
+            </form>
+        </div>
+        <button type="submit">Login</button>
         </form>
     </div>
-    <button type="submit">Login</button>
-    </form>
     </div>
+
 </body>
 
 </html>
