feat: Checkbox hinzugefügt feat: änderungen im HTML für Style.css

--- a/index.html
+++ b/index.html
@@ -9,25 +9,31 @@
     <title>ToDo Index</title>
 </head>
 <body>
-    <button><a href=./index.html>Meine Liste</a></button>
-    <header>
-        <form action="./bearbeiten.html">
-            <input type="submit" value="Tasks Hinzufügen" />
-        </form>
+    <div id="buttonsDiv">
+        <button><a href=./index.html>Meine Liste ✔</a></button>
+        <header>
+            <form action="./bearbeiten.html">
+                <input type="submit" value="Tasks Hinzufügen" />
+            </form>
+    </div>
+
     </header>
+    <div class="oberdiv">
     <h1>Meine Liste:</h1>
+    <div class="background">
     <table>
         <thead>
             <tr>
                 <th>ID</th>
                 <th>Title</th>
                 <th>Completed</th>
-                <th>Löschen/Taskname ändern</th>
             </tr>
         </thead>
         <tbody>
 
         </tbody>
     </table>
+    </div>
+    </div>
 </body>
 </html>
