--- a/bearbeiten.html
+++ b/bearbeiten.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
     <script src="./bearbeiten.js"></script>
-    <title>ToDo Hinzufügen</title>
+    <title>Task Hinzufügen</title>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarMenu">
+            <ul class="navbar-nav">
+              <li><a class="nav-link" href="./index.html">Meine Liste ✔</a></li>
+              <li><a class="nav-link" href="./bearbeiten.html">Tasks Hinzufügen</a></li>
+              <li><a class="nav-link" href="./login.html">Login</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 </head>
 <body>
-    <div class="linkdiv">
-        <button><a href=./index.html>Meine Liste ✔</a></button>
-    </div>
     <div class="hinzufügdiv">
     <h1>Neuer Task erstellen</h1>
       <form id="add">
@@ -19,5 +31,8 @@
         <button id="added" type="submit">Tasks Hinzufügen</button>
     </form>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
 </html>
