--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
     <script src="./index.js"></script>
-    <title>ToDo Index</title>
+    <title>Task Index</title>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarMenu">
+            <ul class="navbar-nav">
+              <li><a class="nav-link" href="./index.html">Meine Liste ✔</a></li>
+              <li><a class="nav-link" href="./bearbeiten.html">Tasks Hinzufügen</a></li>
+              <li><a class="nav-link" href="./login.html">Login</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 </head>
 <body>
-    <div id="buttonsDiv">
-        <button><a href=./index.html>Meine Liste ✔</a></button>
-        <header>
-            <form action="./bearbeiten.html">
-                <input type="submit" value="Tasks Hinzufügen" />
-            </form>
-    </div>
-
     </header>
     <div class="oberdiv">
     <h1>Meine Liste:</h1>
@@ -35,5 +42,8 @@
     </table>
     </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
 </html>
