--- a/login.html
+++ b/login.html
@@ -5,12 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
     <script src="./login.js"></script>
     <title>Login</title>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarMenu">
+            <ul class="navbar-nav">
+              <li><a class="nav-link" href="./index.html">Meine Liste ✔</a></li>
+              <li><a class="nav-link" href="./bearbeiten.html">Tasks Hinzufügen</a></li>
+              <li><a class="nav-link" href="./login.html">Login</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <style>
         label {
             display: hidden;
+        }
+
+        .hidden {
+            display: none;
         }
     </style>
 
@@ -32,13 +51,16 @@
                 <div>
                     <label for="passwordInput">Passwort</label>
                     <input type="password" name="password" id="passwordInput">
+                </div>
+                <button type="submit">Login</button>
             </form>
-        </div>
-        <button type="submit">Login</button>
+   
         </form>
     </div>
     </div>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
 
 </html>
